IoTMapperCluster/kubernetes/loadbalancing/ingress/nginx_load_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
  annotations:
    metallb.universe.tf/address-pool: "exit-central"
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
